@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-15T00:51:44Z",
-  "count_outdated" : 4783,
-  "uniques_outdated" : 1380,
-  "count" : 4854,
-  "uniques" : 1426,
+  "timestamp" : "2023-07-15T08:10:16Z",
+  "count_outdated" : 4784,
+  "uniques_outdated" : 1381,
+  "count" : 4855,
+  "uniques" : 1427,
   "clones" : [
-    {
-      "timestamp": "2023-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-03T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 9,
       "uniques_minmax": [ 2, 9 ],
       "uniques_decinc": [ 0, 9 ]
+    },
+    {
+      "timestamp": "2023-07-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
