@@ -3,11 +3,6 @@
   "uniques": 38,
   "clones": [
     {
-      "timestamp": "2023-07-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-03T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -56,6 +51,11 @@
       "timestamp": "2023-07-14T00:00:00Z",
       "count": 12,
       "uniques": 9
+    },
+    {
+      "timestamp": "2023-07-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
