@@ -1,3 +1,12 @@
+2023-07-15T08:10:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5561236276 # 1725
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
+* notice: last 14d: unq all: 38 71
+* notice: prev accum: outdated-unq outdated-all / unq all: 1380 4783 / 1426 4854
+* notice: next accum: outdated-unq outdated-all / unq all: 1381 4784 / 1427 4855
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-07-01] / [2023-07-15]
+
 2023-07-15T00:51:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5559538626 # 1724
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
